--- a/GrapheneTrace/Views/Account/Login.cshtml
+++ b/GrapheneTrace/Views/Account/Login.cshtml
@@ -22,12 +22,12 @@
             <form method="post">
                 <div class="mb-3">
                     <label>Email</label>
-                    <input class="form-control" name="email" required />
+                    <input class="form-control" placeholder="Enter Your Email" name="email" required />
                 </div>
 
                 <div class="mb-3">
                     <label>Password</label>
-                    <input type="password" class="form-control" name="password" required />
+                    <input type="password" class="form-control" placeholder="Enter Your Password" name="password" required />
                 </div>
 
                 <button class="btn btn-primary w-100">Login</button>
