--- a/GrapheneTrace/Views/Account/Register.cshtml
+++ b/GrapheneTrace/Views/Account/Register.cshtml
@@ -13,17 +13,18 @@
 <form method="post" class="card shadow-sm p-4" style="max-width: 500px;">
     <div class="mb-3">
         <label>Email</label>
-        <input class="form-control" name="email" required />
+        <input class="form-control" placeholder="Enter Your Email" name="email" required />
     </div>
 
     <div class="mb-3">
         <label>Password</label>
-        <input type="password" class="form-control" name="password" required />
+        <input type="password" class="form-control" placeholder="Enter Your Password" name="password" required />
     </div>
 
     <div class="mb-3">
         <label>Role</label>
         <select class="form-select" name="role" required>
+			<option value="" disabled selected>Select Your Role</option>
             <option value="Patient">Patient</option>
             <option value="Clinician">Clinician</option>
             <option value="Admin">Admin</option>
